Dockerized the app & removed stockfish binary, added swagger doc, modified README and javadoc and refactored code